# tala

./: .gitignore  .swp  Cargo.toml  README.md
optics/: Cargo.toml
optics/src/: gpu.rs  intersection.rs  lib.rs  material.rs  ray.rs  refracted_ray.rs  system.rs
optics/src/surface/: data.rs  mod.rs
optics/src/surface/field/: index.rs  kind.rs  mod.rs
optics/src/surface/kind/: coordinate_break.rs  mod.rs  spherical.rs
ui/: Cargo.toml
ui/src/: controller.rs  main.rs
ui/src/app/: formatting.rs  log.rs  mod.rs  si.rs  state.rs
ui/src/app/tabs/: config.rs  log.rs  material_viewer.rs  mod.rs  surface_editor.rs  system_2d_viewer.rs
ui/src/app/widgets/: material_index.rs  mod.rs  surface_row.rs  wavelength.rs
ui/src/request/: mod.rs  ping.rs
