[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
eframe = "0.32"
egui = { version = "0.32", features = ["mint"] }
egui_extras = "0.32"
egui_plot = "0.33"
env_logger = "0.11.8"
tokio = { version = "1.45.1", features = ["full"] }
optics = { path = "../optics" }
log = "0.4.27"
egui_dock = "0.17"
